# bazel_compilers

./: .bazeliskrc  .bazelrc  .gitignore  README.md  WORKSPACE
.github/workflows/: main.yml
compilers/: dependencies.bzl
compilers/arm_compiler/: BUILD.bazel  CROSSTOOL  README.md  cc_toolchain_config.bzl
compilers/arm_compiler/linaro_linux_gcc_5_3_1/: BUILD.bazel  arm-linux-gnueabihf-gcc
compilers/arm_compiler/linaro_linux_gcc_aarch64/: BUILD.bazel  aarch64-linux-gnu-ar  aarch64-linux-gnu-gcc
compilers/arm_compiler/linaro_linux_gcc_armv7/: BUILD.bazel  arm-linux-gnueabihf-ar  arm-linux-gnueabihf-gcc
example/: BUILD  example_lib.cpp  example_lib.h  example_test.cpp  main.cpp
