# This is the entry point for --crosstool_top.  Toolchains are found
# by lopping off the name of --crosstool_top and searching for
# 'cc-compiler-${CPU}' in this BUILD file, where CPU is the target CPU
# specified in --cpu.
#
# This file group should include
#   * all cc_toolchain targets supported
#   * all file groups that said cc_toolchain might refer to
filegroup(
    name = "toolchain_fg",
    srcs = [
        ":cc-compiler-k8",
        ":cc-compiler-armeabi-v7a",
        ":linaro_linux_all_files_armv7",
        "@org_linaro_components_toolchain_gcc_armv7//:compiler_components",
    ],
)

cc_toolchain_suite(
    name = "toolchain",
    # target_cpu | compiler
    toolchains = {
        "armeabi-v7a": "cc-compiler-armeabi-v7a",
        "k8": "cc-compiler-k8",
        "armeabi-v7a|gcc": "cc-compiler-armeabi-v7a",
        "k8|compiler": "cc-compiler-k8",
    },
    visibility = ["//visibility:public"],
)

filegroup(
    name = "linaro_linux_all_files_armv7",
    srcs = [
        "//compilers/arm_compiler/linaro_linux_gcc_armv7:tool-wrappers",
        "@org_linaro_components_toolchain_gcc_armv7//:compiler_pieces",
    ],
)

filegroup(
    name = "linaro_linux_linker_files_armv7",
    srcs = [
        "//compilers/arm_compiler/linaro_linux_gcc_armv7:ar",
        "//compilers/arm_compiler/linaro_linux_gcc_armv7:gcc",
        "//compilers/arm_compiler/linaro_linux_gcc_armv7:ld",
        "@org_linaro_components_toolchain_gcc_armv7//:compiler_pieces",
    ],
)

filegroup(
    name = "linaro_linux_compiler_files_armv7",
    srcs = [
        "//compilers/arm_compiler/linaro_linux_gcc_armv7:as",
        "//compilers/arm_compiler/linaro_linux_gcc_armv7:gcc",
        "//compilers/arm_compiler/linaro_linux_gcc_armv7:ld",
    ],
)

filegroup(
    name = "empty",
    srcs = [],
)

cc_toolchain(
    name = "cc-compiler-armeabi-v7a",
    all_files = ":linaro_linux_all_files_armv7",
    compiler_files = ":linaro_linux_compiler_files_armv7",
    dwp_files = ":empty",
    # dynamic_runtime_libs = [":empty"],
    # static_runtime_libs = [":empty"],
    linker_files = ":linaro_linux_linker_files_armv7",
    objcopy_files = "//compilers/arm_compiler/linaro_linux_gcc_armv7:objcopy",
    strip_files = "//compilers/arm_compiler/linaro_linux_gcc_armv7:strip",
    supports_param_files = 1,
    visibility = ["//visibility:public"],
)

cc_toolchain(
    name = "cc-compiler-k8",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    # dynamic_runtime_libs = [":empty"],
    linker_files = ":empty",
    objcopy_files = ":empty",
    # static_runtime_libs = [":empty"],
    strip_files = ":empty",
    supports_param_files = 1,
    visibility = ["//visibility:public"],
)
