# This is the entry point for --crosstool_top.  Toolchains are found
# by lopping off the name of --crosstool_top and searching for
# 'cc-compiler-${CPU}' in this BUILD file, where CPU is the target CPU
# specified in --cpu.

load(":cc_toolchain_config.bzl", "cc_toolchain_config")

# This file group should include
#   * all cc_toolchain targets supported
#   * all file groups that said cc_toolchain might refer to
filegroup(
    name = "toolchain_fg",
    srcs = [
        ":cc-compiler-armeabi-v7a",
        ":cc-compiler-aarch64-linux-gnu",
        ":cc-compiler-k8",
        ":linaro_linux_linker_files_armv7",
        "@org_linaro_components_toolchain_gcc_armv7//:compiler_components",
    ],
)

filegroup(
    name = "srcs",
    srcs = glob(["**"]) + [
        "//compilers/arm_compiler/linaro_linux_gcc_armv7:srcs",
    ],
    visibility = ["//visibility:private"],
)

cc_toolchain_suite(
    name = "toolchain",
    # target_cpu | compiler
    toolchains = {
        "k8": "cc-compiler-k8",
        "armeabi-v7a|gcc": "cc-compiler-armeabi-v7a",
        "aarch64-linux-gnu|gcc": "cc-compiler-aarch64-linux-gnu",
        "k8|compiler": "cc-compiler-k8",
    },
    visibility = ["//visibility:public"],
)

filegroup(
    name = "linaro_linux_all_files_armv7",
    srcs = [
        "//compilers/arm_compiler/linaro_linux_gcc_armv7:tool-wrappers",
        "@org_linaro_components_toolchain_gcc_armv7//:compiler_pieces",
    ],
)

filegroup(
    name = "linaro_linux_linker_files_armv7",
    srcs = [
        "//compilers/arm_compiler/linaro_linux_gcc_armv7:ar",
        "//compilers/arm_compiler/linaro_linux_gcc_armv7:gcc",
        "//compilers/arm_compiler/linaro_linux_gcc_armv7:ld",
        "@org_linaro_components_toolchain_gcc_armv7//:compiler_pieces",
    ],
)

filegroup(
    name = "linaro_linux_compiler_files_armv7",
    srcs = [
        "//compilers/arm_compiler/linaro_linux_gcc_armv7:as",
        "//compilers/arm_compiler/linaro_linux_gcc_armv7:gcc",
        "//compilers/arm_compiler/linaro_linux_gcc_armv7:ld",
    ],
)

filegroup(
    name = "linaro_linux_all_files_aarch64",
    srcs = [
        "//compilers/arm_compiler/linaro_linux_gcc_aarch64:tool-wrappers",
        "@org_linaro_components_toolchain_gcc_aarch64//:compiler_pieces",
    ],
)

filegroup(
    name = "linaro_linux_linker_files_aarch64",
    srcs = [
        "//compilers/arm_compiler/linaro_linux_gcc_aarch64:ar",
        "//compilers/arm_compiler/linaro_linux_gcc_aarch64:gcc",
        "//compilers/arm_compiler/linaro_linux_gcc_aarch64:ld",
        "@org_linaro_components_toolchain_gcc_aarch64//:compiler_pieces",
    ],
)

filegroup(
    name = "linaro_linux_compiler_files_aarch64",
    srcs = [
        "//compilers/arm_compiler/linaro_linux_gcc_aarch64:as",
        "//compilers/arm_compiler/linaro_linux_gcc_aarch64:gcc",
        "//compilers/arm_compiler/linaro_linux_gcc_aarch64:ld",
    ],
)

filegroup(
    name = "empty",
    srcs = [],
)

cc_toolchain_config(name = "armeabi-v7a_config", cpu = "armeabi-v7a")

cc_toolchain(
    name = "cc-compiler-armeabi-v7a",
    toolchain_identifier = "armeabi-v7a",
    toolchain_config = ":armeabi-v7a_config",
    all_files = ":linaro_linux_all_files_armv7",
    ar_files = "//compilers/arm_compiler/linaro_linux_gcc_armv7:ar",
    as_files = "//compilers/arm_compiler/linaro_linux_gcc_armv7:as",
    compiler_files = ":linaro_linux_compiler_files_armv7",
    dwp_files = ":empty",
    linker_files = ":linaro_linux_linker_files_armv7",
    objcopy_files = "//compilers/arm_compiler/linaro_linux_gcc_armv7:objcopy",
    strip_files = "//compilers/arm_compiler/linaro_linux_gcc_armv7:strip",
    supports_param_files = 1,
    visibility = ["//visibility:public"],
)

cc_toolchain_config(name = "aarch64-linux-gnu_config", cpu = "aarch64-linux-gnu")

cc_toolchain(
    name = "cc-compiler-aarch64-linux-gnu",
    toolchain_identifier = "aarch64-linux-gnu",
    toolchain_config = ":aarch64-linux-gnu_config",
    all_files = ":linaro_linux_all_files_aarch64",
    ar_files = "//compilers/arm_compiler/linaro_linux_gcc_aarch64:ar",
    as_files = "//compilers/arm_compiler/linaro_linux_gcc_aarch64:as",
    compiler_files = ":linaro_linux_compiler_files_aarch64",
    dwp_files = ":empty",
    linker_files = ":linaro_linux_linker_files_aarch64",
    objcopy_files = "//compilers/arm_compiler/linaro_linux_gcc_aarch64:objcopy",
    strip_files = "//compilers/arm_compiler/linaro_linux_gcc_aarch64:strip",
    supports_param_files = 1,
    visibility = ["//visibility:public"],
)

cc_toolchain_config(name = "local_config", cpu = "k8")

cc_toolchain(
    name = "cc-compiler-k8",
    toolchain_identifier = "local",
    toolchain_config = ":local_config",
    all_files = ":empty",
    ar_files = ":empty",
    as_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 1,
)
